--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ Description: A custom theme designed by 3 awesome people specially for VWC!
 Version: 0.1
 */
 
+header{
+	display: flex;
+}
+
 h1{
   color: pink;
 }
