--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ header{
 	padding: 0;
 	display: flex;
 	list-style-type: none;
-	align-content: flex-end;
+	justify-content: space-between;
+	height: 100%;
 }
 
 #menu-top-menu > li{
