--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ header{
 #menu-top-menu{
 	padding: 0;
 	display: flex;
+	margin: 0px;
 	list-style-type: none;
 	justify-content: space-around;
 	align-items: center;
