--- a/style.css
+++ b/style.css
@@ -28,7 +28,9 @@ header{
 }
 
 #menu-top-menu > li:hover > .sub-menu{
-	display: block;
+	display: flex;
+	flex-direction: column;
+	z-index: 25;
 }
 
 .sub-menu{
@@ -37,6 +39,8 @@ header{
 	list-style-type: none;
 	display: none;
 }
+
+
 
 h1{
   color: pink;
