--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ header{
 	margin: 10px;
 	text-align: center;
 	position: relative;
+	flex: 1;
 }
 
 #menu-top-menu > li:hover > .sub-menu{
@@ -46,7 +47,7 @@ header{
 	z-index: 25;
 	position: relative;
 	top: 100%;
-	width: auto;
+	width: 100%;
 }
 
 
