--- a/style.css
+++ b/style.css
@@ -28,11 +28,12 @@ header{
 
 #menu-toggle{
 	display: none;
-	opacity: 1;
+	opacity: 0;
 	height: 24px;
     width: 24px;
     margin: 0;
     padding: 0;
+	cursor: pointer;
 }
 
 @media (max-width: 815px) {
