--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ header{
     right: 10px;
     top: 10px;  
   }
+  #menu-toggle:checked .header-menu{
+	  display: flex;
+	  flex-direction: column;
+  }
 }
 
 #menu-top-menu{
