--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ Version: 0.1
 
 header{
 	display: flex;
+	position: relative;
 }
 
 .custom-logo-link{
@@ -50,6 +51,10 @@ header{
   }
   #menu-toggle:checked ~ .header-menu{
 	  display: block;
+	  flex: 0;
+	  min-width: 0;
+	  position: absolute;
+	  top: 30%;
   }
   
   #menu-toggle:checked ~ .header-menu > #menu-top-menu{
