--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header{
 
 @media (max-width: 815px) {
   .header-menu {
-	display: none;
+	overflow: none;
     width: 0;
 	-webkit-transition: width .5s; /* For Safari 3.1 to 6.0 */
 	transition: width .5s;
@@ -72,7 +72,6 @@ header{
 	z-index: 2;
   }
   #menu-toggle:checked ~ .header-menu{
-	  display: block;
 	  width: 30%;
 	  flex: 0;
 	  min-width: 0;
