--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header{
 @media (max-width: 815px) {
   .header-menu {
     width: 0;
-	overflow: hidden;
+	visibility: hidden;
 	-webkit-transition: width .5s; /* For Safari 3.1 to 6.0 */
 	transition: width .5s;
   }
@@ -72,6 +72,7 @@ header{
 	z-index: 2;
   }
   #menu-toggle:checked ~ .header-menu{
+	  visibility: visible;
 	  width: 30%;
 	  flex: 0;
 	  min-width: 0;
