--- a/style.css
+++ b/style.css
@@ -145,3 +145,12 @@ header{
 h1{
   color: pink;
 }
+
+#head-gif{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    height: 70%;
+}
