--- a/style.css
+++ b/style.css
@@ -104,6 +104,9 @@ header{
 #menu-top-menu{
 	padding: 0;
 	display: flex;
+	position: fixed;
+	left: 0;
+	right: 0;
 	margin: 0px;
 	list-style-type: none;
 	justify-content: space-around;
