--- a/style.css
+++ b/style.css
@@ -156,3 +156,11 @@ h1{
     text-align: center;
     height: 70%;
 }
+
+#content-body{
+	position: absolute;
+    top: calc(70%);
+    left: 0;
+    right: 0;
+    text-align: center;
+}
